# wenyan-book-video

./: .envrc  .gitignore  .gitmodules  AGENTS.md  README-NIX.md  README.md  flake.nix  package.json  shell.nix
audios/: audio-1-3.mp3:Zone.Identifier
processor/: README.md  __init__.py  audio-femalize.py  build-segmented-transcripts.py  build-segments.py  build-sentences.py  fill-segment-gaps.py  lookup_meaning.ts  main.py  package.json  parse-markdown.py  pyproject.toml  reconstruct_segment_transcripts.py  segment-text.py  special_cases.toml  synthesize-titles.py  synthesize.py  transcribe-titles.py  transcribe.py  translate-compare.py  translate.py  translate.toml  voice-change.py
processor/inspect/: analyze-characters.py
processor/migration/: cinix_to_tupa.py  convert-segment-transcripts-to-sentences.py  convert-segment-translations-to-sentences.py  generate_sentence_segments.py  migrate_sentences.py  migrate_sentences_legacy.py  test-cinix-to-tupa.ts
processor/utils/: __init__.py  cli_style.py  progress.py  transcriber.py
renderer/: README.md  package.json  remotion.config.ts
segmenter/: next.config.ts  package.json
segments/: 1-10.txt  1-11.txt  1-13.txt  1-14.txt  1-15.txt  1-16.txt  1-18.txt  1-2.txt  1-4.txt  1-7.txt  1-8.txt  1-9.txt  10-1.txt  10-11.txt  10-12.txt  10-14.txt  10-15.txt  10-16.txt  10-2.txt  10-20.txt  10-21.txt  10-22.txt  10-23.txt  10-24.txt  10-25.txt  10-3.txt  10-5.txt  10-6.txt  10-8.txt  11-1.txt  11-14.txt  11-16.txt  11-19.txt  11-2.txt  11-20.txt  11-21.txt  11-22.txt  11-23.txt  11-24.txt  11-6.txt  (+128 more)
translations/: 1-2.txt  (+9 more)
(+1046 files in other folders)
